feat(workflows): add review endpoint (#28)
* feat: add review endpoint


* Revert "feat: add review endpoint"

This reverts commit e93196dedf701a97139ccfe325070e9b210b6a8a.

* feat: add review endpoint


* fix: e2e tests


* refactor: OnlyRedirect is duplicate of RedirectUrl


---------
